expected/main/core/case/varalt6.err
ERROR: "actual/main/core/case/varalt6.lc", line 8
            Nothing -> 3
            ^
Type mismatch: cannot unify "Maybe" with "Dup"

ERROR: Aborting after previously reported error

